tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier1LV-AAAAAAAAAAAAAAAAAAAAAw==__BeSuretoGetYourA-AAAAAAAAAAAAAAAAAAAECw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1035,
  "prerequisites": [
    98
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Want to use all that delicious XP to raise your levels? Move the tank with XP above you and attach this convenient shower head to take the XP from the tank.\n\nThis thing can be laggy, so be careful about letting too many XP orbs out of the tank. Apply a redstone signal to turn it off.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§5§lBe Sure to Get Your Armpits",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    98
  ],
  "rewards": [],
  "tasks": []
}
