tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier1LV-AAAAAAAAAAAAAAAAAAAAAw==__BetterGalliumand-AAAAAAAAAAAAAAAAAAAHBA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1796,
  "prerequisites": [
    836
  ],
  "properties": {
    "auto_claim": false,
    "desc": "There are a couple of ways to increase your Gallium.\n\n1. Find TiCo zinc gravel ore and process it to get gallium.\n\n2. Breed Zinc Bees and react the Gallium Combs with Hydrochloric Acid. The bee is not too deep in the breeding progression and the processing only requires LV.\n\n3. Use IC2 crops under the Farming tab to get Galvania leaves, to 4x your zinc and sphalerite crushed ores to purified ores.\n\n4. Use the HV macerator on the centrifuged ores to get a 10 percent chance of a whole Gallium dust.\n\n5. Use plentiful Bauxite ores from the Moon.\n\n6. Kill Redcaps/Redcap Sappers in Twilight Forest. Also Kobolds drop Arsenic.\n\n7. Duplicate nugget with Thaumcraft. This requires §lTaboo§r researches, so you might not want to do this.\n\nFor Arsenic, Cobaltite ore in the Twilight Forest is a great source for more information go to the quest \"Cobalt and Arsenic from Cobaltite\".\n\nCobaltite can also be multiplied 4x by the IC2 crop Nickelback.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§5§lBetter Gallium and Arsenic Sources",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    836
  ],
  "rewards": [],
  "tasks": []
}
