tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier1LV-AAAAAAAAAAAAAAAAAAAAAw==__BiomesEverywhere-AAAAAAAAAAAAAAAAAAAF5g==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1510,
  "prerequisites": [
    97
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Tired of searching all over the map for that Bamboo Forest or Tropical Rainforest? Desperate for clay dust and need to find a Canyon or Mesa biome? Nature's compass will lead you to the biome you're looking for, if it's within its range.\n\nThe compass menu has the following functionality:\n* When Sorted By: Name, you can filter the list by name or its parts. The search is case-insensitive.\n* You can search by keys and their combinations. For instance, name: bamboo, climate: warm, bh: -1.8, tag: forest.\nAll available keys are:\nname,\nclimate [hellish, hot, warm, normal, cold, icy],\nbaseheight | bh (float, can be negative),\nheightvariation | hv (float),\nrainfall | rain (float),\ntemperature | temp (float),\nhumidity [damp, normal, arid],\ntags.\n\nSome things to keep in mind:\n* Biomes from other dimensions show up on the list, don't bother searching for those unless you're in that dimension.\n* In general, the full list has biomes that are not generated by Realistic World Generator, like Sunflower Plains.\n* Radius 10000 means it couldn't find the biome. In this case after the initial search, its menu will show only the biomes in the 10k radius. Use Shift+RMB to see the whole list again.\n* You can try again at a different location - the range is 10k from your current position.\n* Artificially created biomes count, so remove them if you want to find a natural one.\n* There's lots of different 'versions' of biomes under the same category, so if you want a tropical one for tropical bees, there are actually a bunch of places you can get it.\n* For those who don't mind the freeze when searching, the radius can be changed in a config. The HUD position can also be changed in the config.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§5§lBiomes Everywhere, But Not the One You Want?",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    97
  ],
  "rewards": [],
  "tasks": []
}
