tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier1LV-AAAAAAAAAAAAAAAAAAAAAw==__C9H8O4NaClH2O-AAAAAAAAAAAAAAAAAAACHw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 543,
  "prerequisites": [
    70
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Want to make some cetane-boosted diesel, plastic or some chemical dyes? Then it's time to craft a chemical reactor.\n\nYou can use the battery slot and the other extra slot in the GUI to store items.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§5§lC9H8O4...NaCl...H2O...",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    70
  ],
  "rewards": [],
  "tasks": []
}
