tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier1LV-AAAAAAAAAAAAAAAAAAAAAw==__ChlorineYourNewB-AAAAAAAAAAAAAAAAAAAKiQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2697,
  "prerequisites": [
    622
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Chlorine is a fluid that is used in significant quantities throughout the game, so you might as well get used to collecting it now.\n\nYou can electrolyze Salt, Rock Salt, Sodalite (finally a use!), or Salt Water for it. Since you'll need so much, you may wish to consider using your first Super Tank to hold it all.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§5§lChlorine, Your New Best Friend",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    622
  ],
  "rewards": [],
  "tasks": []
}
